--- a/style.css
+++ b/style.css
@@ -68,6 +68,59 @@ h1 {
   color: var(--clr-neutral-darkest);
 }
 
+button:hover,
+input:hover,
+.billing__button-container:hover {
+  cursor: pointer;
+}
+
+input[type='range'] {
+  -webkit-appearance: none;
+  appearance: none;
+  background: transparent;
+}
+
+/* Chrome, Safari, Opera, and Edge Chromium */
+input[type='range']::-webkit-slider-runnable-track {
+  background: var(--clr-primary-dark);
+  height: 0.5rem;
+  border-radius: 10px;
+}
+
+/* Firefox */
+input[type='range']::-moz-range-track {
+  background: var(--clr-primary-dark);
+  height: 0.5rem;
+  border-radius: 10px;
+}
+
+input[type='range']::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  margin-top: -1rem;
+  height: 2.5rem;
+  width: 2.5rem;
+  border-radius: 50%;
+  background-color: var(--clr-primary-dark);
+  background-image: url('./images/icon-slider.svg');
+  background-position: center;
+  background-repeat: no-repeat;
+  box-shadow: 0 10px 15px 4px var(--clr-primary-light);
+}
+
+/***** Firefox *****/
+input[type='range']::-moz-range-thumb {
+  border: none;
+  height: 2.5rem;
+  width: 2.5rem;
+  border-radius: 50%;
+  background-color: var(--clr-primary-dark);
+  background-image: url('./images/icon-slider.svg');
+  background-position: center;
+  background-repeat: no-repeat;
+  box-shadow: 0 10px 15px 4px var(--clr-primary-light);
+}
+
 body {
   font-family: var(--ff-primary);
   font-size: var(--fs-md);
@@ -86,7 +139,7 @@ main {
   display: flex;
   flex-direction: column;
   min-width: 300px;
-  margin: 3rem 1.5rem;
+  margin: 5rem 1.5rem;
   gap: 5rem;
   align-items: center;
   text-align: center;
@@ -121,7 +174,7 @@ form {
 
 .component__pricing {
   display: grid;
-  padding: 1.5rem;
+  padding: 0 1.5rem;
   grid-template-columns: auto;
   grid-template-rows: auto auto auto;
   row-gap: 2rem;
@@ -184,7 +237,7 @@ form {
   background-color: var(--clr-neutral-lighter);
   outline: 1px solid transparent;
   border: 1px solid transparent;
-  margin: 0 0 0 auto;
+  margin: 0 auto 0 0;
   transition: margin 0.25s ease;
 }
 .billing__wrapper {
@@ -227,6 +280,21 @@ ul.details__text li {
   color: var(--clr-tertiary-light);
   outline: 1px solid transparent;
   border: 1px solid transparent;
+}
+
+.attribution {
+  font-size: var(--fs-sm);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 2rem;
+}
+.attribution a {
+  color: var(--clr-neutral-darkest);
+}
+.attribution a:hover {
+  color: var(--clr-primary-dark);
 }
 
 .sr-only:not(:focus):not(:active) {
