--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ input[type='range'] {
   border-radius: 10px;
   background: linear-gradient(
     to right,
-    var(--clr-primary-dark) 50%,
+    var(--clr-primary-light) 50%,
     var(--clr-neutral-light) 50%
   );
 }
@@ -170,7 +170,7 @@ form {
   flex-direction: column;
   width: 100%;
   padding: 2rem 0;
-  max-width: 540px;
+  max-width: 600px;
   gap: 2rem;
   border-radius: 0.5rem;
   box-shadow: 0 0 20px 0px var(--clr-neutral-dark);
@@ -182,6 +182,7 @@ form {
   grid-template-columns: auto;
   grid-template-rows: auto auto auto;
   row-gap: 2rem;
+  align-items: center;
 }
 .component__pricing-amount {
   grid-area: 1 / 1 / 1 / 1;
@@ -233,6 +234,10 @@ form {
   background-color: var(--clr-neutral-dark);
   border-radius: 2rem;
   padding: 2px 4px;
+  transition: background-color 0.25s ease;
+}
+.billing__button-container:hover {
+  background-color: var(--clr-primary-light);
 }
 .billing__button-container button {
   width: 1.25rem;
@@ -268,14 +273,14 @@ form {
   gap: 2rem;
 }
 
-ul.details__text {
+.details__text {
   list-style: none;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 1rem;
 }
-ul.details__text li {
+.details__text li {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -304,6 +309,40 @@ ul.details__text li {
 }
 .attribution a:hover {
   color: var(--clr-primary-dark);
+}
+
+@media (min-width: 36rem) {
+  form {
+    padding: 2rem;
+  }
+  .component__pricing {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+  }
+  .component__pricing-amount {
+    text-align: left;
+  }
+  .component__pricing-total {
+    text-align: right;
+    justify-content: end;
+    grid-area: 1 / 2 / 1 / 2;
+  }
+  .component__pricing-slider {
+    grid-area: 2 / 1 / 2 / 3;
+  }
+
+  .details {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .details__text {
+    align-items: start;
+  }
+
+  .details__submit {
+    margin: auto 0 auto auto;
+  }
 }
 
 /* utility classes */
